<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuizPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_trackQN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_trackQN"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:contentDescription="@string/btn_back"
            android:drawableTop="?attr/actionModeCloseDrawable"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tex_def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/txt_view_def"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_opt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_corner2"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_opt1"
            android:textColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_opt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_corner2"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_opt2"
            android:textColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_opt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_corner2"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_opt3"
            android:textColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_opt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_corner2"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_opt4"
            android:textColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="#2196F3"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_next"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>